# bazel-lombok-generated-annotation

./: .buckconfig  .gitignore  README.md
example/: BUCK  BUILD.bazel  Problem.java
